# PyTorchSim

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  build_script.sh  extension_codecache.py  pyproject.toml  test_extension_backend.py  test_scheduler.py  test_sparsity.py  test_torchinductor.py
AsmParser/: onnx_utility.py  riscv_parser.py  tog_generator.py
GemminiLowerPass/: CMakeLists.txt  LowerGemminiPass.cpp  LowerGemminiPass.h
PyTorchSimBackend/: CMakeLists.txt
PyTorchSimFrontend/: extension_codecache.py  extension_config.py  extension_device.cpp  extension_op.py  llvm_caller_codegen.py  llvm_codegen_backend.py  llvm_common.py  llvm_conv_template.py  llvm_gemm_template.py  llvm_lowering.py  llvm_template.py
Scheduler/: scheduler.py
Simulator/: simulator.py
configs/: q32_12group_local_dram_dsp.json  q32_2group_local_dram_dsp.json  q32_4core_dsp.json  q32_cim_dsp.json  q32_local_dram_dsp.json  systolic_ws_128x128_c2_simple_noc_tpuv2.json  systolic_ws_128x128_c2_simple_noc_tpuv3.json
experiments/: BERT.py  conv.py  gemm.py  resnet18.py  resnet50.py
extension_backends/: common.py  extension_codegen_backend.py  extension_device.cpp  llvm_codegen_backend.py  llvm_common.py  llvm_gemm_template.py  llvm_template.py
gem5_script/: script.py  script_systolic.py  vpu_config.py
scripts/: analyze_multicore_log.py  chiplet_prep.py  end2end.sh  get_tog_result.sh  q32_attribute_gen.py
stonne_experiment/: run.sh
tests/: debug_local_dram.py  test_activation.py  test_add.py  test_batchnorm.py  test_bmm.py  test_cnn.py  test_conv2d.py  (+37 more)
(+138 files in other folders)
